--- a/main.css
+++ b/main.css
@@ -57,7 +57,6 @@ a {
     font-weight: bolder;
     text-underline-mode: true;
 }
-
 a[title="Clear field"] {
     color: #2f2f2f;
     font-weight: bolder;
@@ -80,7 +79,6 @@ details {
     -webkit-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
     -moz-box-shadow: 0 0 15px -9px rgba(0,0,0,0.90);
 }
-
 details:hover {
     transition: .2s ease-in-out;
     cursor: pointer;
@@ -90,7 +88,6 @@ summary {
     font-weight: bolder;
     transition: .2s ease-in-out;
 }
-
 summary:hover {
     transition: .2s ease-in-out;
     cursor: pointer;
@@ -130,10 +127,8 @@ summary:hover {
     justify-content: center;
     align-items: center;
     margin: 15px;
-
     padding: 15px;
 }
-
 
 
 p {
@@ -152,7 +147,6 @@ select {
 label {
     padding-right: 5px;
 }
-
 input {
     height: 40px;
     font-weight: bold;
@@ -234,6 +228,15 @@ button[id*='clear']:hover, button[id*='Clear']:hover, .clearButton:hover {
 
 img {
     z-index: 1;
+}
+
+.newContentFieldEnhancement {
+    height: 25px;
+    width: 25px;
+    margin: 0 10px 0 0;
+}
+.newContentFieldEnhancement:hover {
+
 }
 
 .tabs {
@@ -355,7 +358,7 @@ img {
 
 /* Images produced in the 'New Content' tab */
 #finalImageHorizontal {
-    display: none;
+    display: block;
     width: 480px;
     height: 252px;
     border: 2px solid #000000;
@@ -502,114 +505,6 @@ img {
 .socialMediaIcon {
     width: 25px;
     height: 25px;
-}
-
-/* Text in the images of the 'New Content' tab */
-#finalTitleHorizontal {
-    font-size: 30px;
-    font-weight: bolder;
-    word-wrap: break-word;
-}
-#finalDateHorizontal {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalTimeHorizontal {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalLocationHorizontal {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalOrganizationHorizontal {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalHostHorizontal {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-
-#finalTitleSquare {
-    font-size: 30px;
-    font-weight: bolder;
-    word-wrap: break-word;
-    padding: 0 0 5px 0;
-}
-#finalDateSquare {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalTimeSquare {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalLocationSquare {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalOrganizationSquare {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalHostSquare {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-
-#finalTitleVertical {
-    font-size: 30px;
-    font-weight: bolder;
-    word-wrap: break-word;
-    padding: 0 0 5px 0;
-}
-#finalDateVertical {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalTimeVertical {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalLocationVertical {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalOrganizationVertical {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalHostVertical {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-
-#finalTitleStory {
-    font-size: 30px;
-    font-weight: bolder;
-    word-wrap: break-word;
-    padding: 0 0 5px 0;
-}
-#finalDateStory {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalTimeStory {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalLocationStory {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalOrganizationStory {
-    font-size: 20px;
-    word-wrap: break-word;
-}
-#finalHostStory {
-    font-size: 20px;
-    word-wrap: break-word;
 }
 
 /* Reveal items in the images as they hold a value in the inputs section in 'New Content' */
@@ -1217,3 +1112,5 @@ input[type="checkbox"] {
 .hidden{
 	display: none;
 }
+
+
