--- a/main.css
+++ b/main.css
@@ -1074,8 +1074,6 @@ input[type="checkbox"] {
 
 #snackbar {
     visibility: hidden;
-    min-width: 250px;
-    margin-left: -150px;
     background-color: #333;
     color: #fff;
     text-align: center; 
@@ -1083,8 +1081,9 @@ input[type="checkbox"] {
     padding: 16px; 
     position: fixed;
     z-index: 9999999999; 
-    left: 50%; 
+    left: 50%;
     top: 40px;
+    transform: translateX(-50%);
     font-size: 1.2rem;
 }
 
@@ -1115,7 +1114,176 @@ input[type="checkbox"] {
 }
 
 .hidden{
-	display: none;
+	display: none !important;
+}
+
+.modal{
+	position: fixed;
+	z-index: 999999;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.6);
+    display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal div{
+    display: block;
+}
+
+.modal>form{
+	background-color: white;
+	padding: 24px;
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+	font-size: 16px;
+	color: var(--primaryColor);
+	border-radius: 5px;
+	min-width: 300px;
+	max-width: 400px;
+	width: 40%;
+}
+
+.modal>form h1{
+    font-size: 32px;
+    color: #000;
+    text-align: center;
+}
+
+.modal>form input{
+	margin: 8px 0 16px;
+	padding: 8px;
+	border-radius: 5px;
+}
+
+.modal>form button {
+	padding: 12px;
+	background-color: #6ab04c;
+	color: #ffffff;
+	font-size: medium;
+	margin-top: 24px;
+	cursor: pointer;
+	border: none;
+    border-radius: 8px;
+	transition: .2s ease-in-out;
+}
+
+.modal>form button:hover{
+	background-color: darkgreen;
+	transition: .2s ease-in-out;
+}
+
+.modal>form .btn-outline,
+.modal>form .btn-outline:hover {
+    color: #000;
+    background: white;
+    border: 1px solid #1a1a1a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.modal>form a{
+    color: #1da1f2;
+    text-align: right;
+    cursor: pointer;
+    margin: 8px 0px;
+}
+
+.google-logo{
+    height: 24px;
+    width: 24px;
+
+}
+
+.auth-tab-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+    height: 100%;
+    border-left: 1px solid #f1f1f1;
+    flex: 1;
+}
+.auth-tab-container:hover,
+.auth-tab.has-img:hover{
+    background-color: #c2c2c2;
+}
+
+.auth-tab{
+    width: fit-content;
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px;
+}
+
+.auth-tab:hover{
+    background-color: #19395d;
+}
+
+.auth-tab svg{
+    fill: #34495e;
+}
+
+.auth-tab:hover svg{
+    fill: white;
+}
+
+.menu-container{
+    position: relative;
+    display: inline-block;
+    padding: 4px 12px;
+    color: #000;
+    cursor: default;
+}
+
+.menu{
+    display: none;
+    position: absolute;
+    text-align: center;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    right: 0;
+}
+
+.menu .logout-btn {
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    margin-top: 12px;
+    cursor: pointer;
+    background-color: #f1f1f1;
+}
+
+.menu .logout-btn:hover {
+    background-color: #dfdede;
+}
+
+.menu-container:hover .menu{
+    display: block;
+}
+
+.menu-container img{
+    height: 48px;
+    width: 48px;
+    border-radius: 100%;
+}
+
+.menu-email,
+.menu-name{
+    color: #7f8c8d;
+    cursor: text;
+    margin: 4px 0px;
 }
 
 
