--- a/main.css
+++ b/main.css
@@ -113,6 +113,79 @@ summary:hover {
     cursor: pointer;
 }
 
+.hashtag {
+    background-color: #E3E3E3FF;
+    color: #000;
+    font-weight: 700;
+    font-size: 10px;
+    padding: 5px 10px 5px 5px;
+    border-radius: 7px;
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    width: min-content;
+    cursor: pointer;
+    line-height: 1;
+}
+.hashtag:before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0;
+    border-top: 12px solid white;
+    border-left: 12px solid #E3E3E3FF;
+    width: 0;
+}
+.hashtag:after {
+    content: '';
+    position: absolute;
+    bottom: 0; right: 0;
+    border-bottom: 12px solid white;
+    border-left: 12px solid #E3E3E3FF;
+    width: 0;
+}
+/* image inside text */
+.hashtagClear {
+    transition: .2s ease-in-out;
+    height: 14px;
+    margin: 0 0 0 3px;
+}
+.hashtagClear:hover {
+    scale: 1.2;
+    transition: .2s ease-in-out;
+    cursor: pointer;
+}
+
+
+#finalTextNav {
+    display: flex;
+    justify-content: space-between;
+    width: 220px;
+    position: relative;
+    left: 10px;
+}
+.finalTextNavDiv {
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    transition: .2s ease-in-out;
+    border-top: 1px solid #a2a2a2;
+    border-left: 1px solid #a2a2a2;
+    border-right: 1px solid #a2a2a2;
+    font-size: 14px;
+}
+.finalTextNavDiv:hover {
+    cursor: pointer;
+    background-color: #eaeaea;
+    transition: .2s ease-in-out;
+}
+.finalTextNavDiv img {
+    height: 30px;
+    width: 30px;
+}
 
 
 /* FLEXBOX CLASSES */
@@ -186,6 +259,33 @@ summary:hover {
     background: #ffffff;
 }
 
+.newContentVarHelp {
+    background-color: #f0f0f0;
+    color: #484848;
+    border-top: 1px solid #d0d0d0;
+    font-size: 12px;
+    padding: 5px 10px 5px 10px;
+    width: 428px;
+    position: relative;
+    bottom: 8px;
+    right: 10px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.minimizeHelp {
+    height: 20px;
+    margin: 5px;
+    transition: .2s ease-in-out;
+}
+
+.minimizeHelp:hover {
+    cursor: pointer;
+    background-color: #dadada;
+    transition: .2s ease-in-out;
+}
+
 .newContentVarSuggestions {
     display: none;
     padding: 0 0 0 20px;
@@ -194,7 +294,6 @@ summary:hover {
     justify-content: center;
     align-items: center;
 }
-
 .newContentVarSuggestion {
     padding: 5px 8px 5px 15px;
     margin: 0 0 5px 0;
@@ -226,7 +325,6 @@ summary:hover {
     font-size: 12px;
     font-weight: 900;
 }
-
 .newContentVarSuggestionText {
     font-size: 10px;
     color: #656565;
